[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/race/Race.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/OpenSans-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/race/gui/Speed.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/race/gui/Ammo.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/race/gui/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/race/gui/StatusIconPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/race/gui/Nitro.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/materials/effects/ViewportShader_0.gdshader" type="Shader" id=8]
[ext_resource path="res://assets/materials/effects/ViewportShader_1.gdshader" type="Shader" id=9]
[ext_resource path="res://assets/gui/screen_finish2.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/screen_pause.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/screen_death2.png" type="Texture" id=12]
[ext_resource path="res://assets/gui/screen_death1.png" type="Texture" id=13]
[ext_resource path="res://assets/gui/racelights_background.png" type="Texture" id=14]
[ext_resource path="res://assets/gui/racelights_orange.png" type="Texture" id=15]
[ext_resource path="res://assets/gui/racelights_red.png" type="Texture" id=16]
[ext_resource path="res://assets/gui/racelights_green.png" type="Texture" id=17]
[ext_resource path="res://assets/gui/screen_start.png" type="Texture" id=18]
[ext_resource path="res://assets/gui/screen_finish1.png" type="Texture" id=19]
[ext_resource path="res://assets/fonts/Autumn__.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://src/menuscreens/mainmenu/GFXMenu.gd" type="Script" id=21]
[ext_resource path="res://src/menuscreens/mainmenu/FocusMenu.gd" type="Script" id=22]
[ext_resource path="res://src/menuscreens/mainmenu/TextButton.gd" type="Script" id=23]
[ext_resource path="res://src/menuscreens/mainmenu/GFXOption.gd" type="Script" id=24]
[ext_resource path="res://src/CanvasItemFade.gd" type="Script" id=25]
[ext_resource path="res://assets/gui/screen_carnage1.png" type="Texture" id=26]
[ext_resource path="res://assets/gui/screen_timeout2.png" type="Texture" id=27]
[ext_resource path="res://assets/gui/screen_timeout1.png" type="Texture" id=28]
[ext_resource path="res://assets/gui/screen_timeoutlast1.png" type="Texture" id=29]
[ext_resource path="res://assets/gui/screen_timeoutlast2.png" type="Texture" id=30]
[ext_resource path="res://assets/fonts/mainfont_34.tres" type="DynamicFont" id=31]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )
shader_param/hallucinating = false

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0.17, 0.17, 0.17, 1 )
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
outline_color = Color( 0.17, 0.17, 0.17, 1 )
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 3
outline_color = Color( 0.17, 0.17, 0.17, 1 )
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 3
outline_color = Color( 0.17, 0.17, 0.17, 1 )
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 9 )
shader_param/hallucinating = false
shader_param/strength = 0.08
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/radius = 0.4
shader_param/aberration = 0.425
shader_param/width = 0.09
shader_param/feather = 0.135

[node name="Race" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Viewports" type="ViewportContainer" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Menu" type="MarginContainer" parent="Viewports"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( -608.118, -542 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 0
custom_constants/margin_left = 350
custom_constants/margin_bottom = 115

[node name="MainMenu" type="MarginContainer" parent="Viewports/Menu"]
visible = false
margin_left = 350.0
margin_right = 1870.0
margin_bottom = 971.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 0
custom_constants/margin_top = 715
script = ExtResource( 22 )
esc_index = 3

[node name="Buttons" type="VBoxContainer" parent="Viewports/Menu/MainMenu"]
margin_top = 715.0
margin_right = 1520.0
margin_bottom = 971.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuButton" type="Label" parent="Viewports/Menu/MainMenu/Buttons"]
margin_right = 160.0
margin_bottom = 61.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
script = ExtResource( 23 )
current_text = "Resume"

[node name="MenuButton2" type="Label" parent="Viewports/Menu/MainMenu/Buttons"]
margin_top = 65.0
margin_right = 152.0
margin_bottom = 126.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
text = "Options"
script = ExtResource( 23 )
current_text = "Options"

[node name="MenuButton4" type="Label" parent="Viewports/Menu/MainMenu/Buttons"]
margin_top = 130.0
margin_right = 87.0
margin_bottom = 191.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
text = "Help"
script = ExtResource( 23 )
current_text = "Help"

[node name="MenuButton3" type="Label" parent="Viewports/Menu/MainMenu/Buttons"]
margin_top = 195.0
margin_right = 173.0
margin_bottom = 256.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
text = "Concede"
script = ExtResource( 23 )
current_text = "Concede"

[node name="Settings" type="MarginContainer" parent="Viewports/Menu"]
visible = false
margin_left = 350.0
margin_right = 1870.0
margin_bottom = 965.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 310
custom_constants/margin_bottom = -5
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_name = "GFXSettings"
engage_with_arrows = [ 0, 1, 2, 3, 4, 5, 6 ]
esc_index = 8

[node name="Buttons" type="VBoxContainer" parent="Viewports/Menu/Settings"]
margin_top = 310.0
margin_right = 1520.0
margin_bottom = 970.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Option" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_right = 1520.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Overall:"
script = ExtResource( 24 )
current_text = "Overall:"

[node name="Option2" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 65.0
margin_right = 1520.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "MSAA:"
script = ExtResource( 24 )
current_text = "MSAA:"
focus_symbol = ". (Affects performance greatly)"
option_type = 1

[node name="Option3" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 130.0
margin_right = 1520.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "SSAO:"
script = ExtResource( 24 )
current_text = "SSAO:"
focus_symbol = ". (Affects performance and visuals greatly)"
option_type = 2

[node name="Option4" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 195.0
margin_right = 1520.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Shadows:"
script = ExtResource( 24 )
current_text = "Shadows:"
option_type = 3

[node name="Option5" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 260.0
margin_right = 1520.0
margin_bottom = 321.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Glow:"
script = ExtResource( 24 )
current_text = "Glow:"
option_type = 4

[node name="Option6" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 325.0
margin_right = 1520.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Grass:"
script = ExtResource( 24 )
current_text = "Grass:"
option_type = 5

[node name="Option7" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 390.0
margin_right = 1520.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 3 )
text = "Low-End Disable:
None"
script = ExtResource( 24 )
current_text = "Low-End Disable:"
option_type = 6

[node name="Option8" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 534.0
margin_right = 1520.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Apply"
script = ExtResource( 24 )
current_text = "Apply"
option_type = 7

[node name="Option9" type="Label" parent="Viewports/Menu/Settings/Buttons"]
margin_top = 599.0
margin_right = 1520.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Exit"
script = ExtResource( 24 )
current_text = "Exit"
option_type = 8

[node name="HowToFPS" type="Label" parent="Viewports/Menu/Settings"]
visible = false
margin_top = 310.0
margin_right = 1520.0
margin_bottom = 970.0
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = SubResource( 4 )
text = "                           Use F9 to toggle fps"
valign = 2
script = ExtResource( 25 )
delay_start = 0.0
delay_mid = 1.0
delay_end = 0.0
die_on_end = false
precompleted = true

[node name="GUI" type="VBoxContainer" parent="Viewports"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="HBoxContainer" parent="Viewports/GUI"]
margin_right = 1920.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.85

[node name="FPS" type="Label" parent="Viewports/GUI/Debug"]
margin_right = 1920.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bordered" type="MarginContainer" parent="Viewports/GUI"]
margin_top = 498.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( -608.118, -542 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Basic" type="VBoxContainer" parent="Viewports/GUI/Bordered"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1905.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Drivers" type="VBoxContainer" parent="Viewports/GUI/Bordered/Basic"]
margin_right = 1890.0
margin_bottom = 281.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Gap" type="ReferenceRect" parent="Viewports/GUI/Bordered/Basic"]
margin_top = 281.0
margin_right = 1890.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04
border_color = Color( 0.211765, 0.211765, 0.211765, 1 )

[node name="Bottom" type="HBoxContainer" parent="Viewports/GUI/Bordered/Basic"]
margin_top = 292.0
margin_right = 1890.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.92

[node name="Stats" type="VBoxContainer" parent="Viewports/GUI/Bordered/Basic/Bottom"]
margin_right = 943.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Speed" parent="Viewports/GUI/Bordered/Basic/Bottom/Stats" instance=ExtResource( 3 )]
margin_right = 943.0
margin_bottom = 52.0

[node name="Health" parent="Viewports/GUI/Bordered/Basic/Bottom/Stats" instance=ExtResource( 5 )]
margin_top = 52.0
margin_right = 943.0
margin_bottom = 104.0

[node name="Nitro" parent="Viewports/GUI/Bordered/Basic/Bottom/Stats" instance=ExtResource( 7 )]
margin_top = 104.0
margin_right = 943.0
margin_bottom = 156.0

[node name="Ammo" parent="Viewports/GUI/Bordered/Basic/Bottom/Stats" instance=ExtResource( 4 )]
margin_top = 156.0
margin_right = 943.0
margin_bottom = 208.0

[node name="StatusIconPanel" parent="Viewports/GUI/Bordered/Basic/Bottom/Stats" instance=ExtResource( 6 )]
margin_top = 208.0
margin_right = 943.0
margin_bottom = 260.0

[node name="TrackInfo" type="VBoxContainer" parent="Viewports/GUI/Bordered/Basic/Bottom"]
margin_left = 947.0
margin_right = 1890.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2

[node name="InfoSign" type="Label" parent="Viewports/GUI/Bordered/Basic/Bottom/TrackInfo"]
visible = false
margin_top = 199.0
margin_right = 943.0
margin_bottom = 260.0
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = SubResource( 6 )
align = 2
valign = 2
script = ExtResource( 25 )
delay_start = 0.0
delay_mid = 0.5
delay_end = 0.0
die_on_end = false
precompleted = true

[node name="MineCount" type="Label" parent="Viewports"]
margin_left = 319.0
margin_top = 965.0
margin_right = 356.0
margin_bottom = 1009.0
custom_fonts/font = ExtResource( 31 )
text = "8"
align = 1
valign = 1

[node name="RacingLights" type="HBoxContainer" parent="Viewports"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
alignment = 2

[node name="Timer" type="Timer" parent="Viewports/RacingLights"]
wait_time = 2.0
one_shot = true

[node name="Background" type="TextureRect" parent="Viewports/RacingLights"]
margin_left = 1641.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="TextureRect" parent="Viewports/RacingLights/Background"]
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Orange" type="TextureRect" parent="Viewports/RacingLights/Background"]
visible = false
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green" type="TextureRect" parent="Viewports/RacingLights/Background"]
visible = false
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialTimer" type="Timer" parent="Viewports"]
wait_time = 1.5
autostart = true

[node name="EndScreenTimer" type="Timer" parent="Viewports"]
one_shot = true

[node name="CenterInfo" type="Control" parent="Viewports"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tutorial" type="TextureRect" parent="Viewports/CenterInfo"]
visible = false
margin_left = 476.0
margin_top = 126.0
margin_right = 1476.0
margin_bottom = 926.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="TextureRect" parent="Viewports/CenterInfo"]
visible = false
margin_left = 476.0
margin_top = 126.0
margin_right = 1476.0
margin_bottom = 926.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death" type="Control" parent="Viewports/CenterInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death" type="TextureRect" parent="Viewports/CenterInfo/Death"]
margin_left = 563.045
margin_top = -60.1343
margin_right = 1463.04
margin_bottom = 439.866
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death2" type="TextureRect" parent="Viewports/CenterInfo/Death"]
margin_left = 453.501
margin_top = 718.817
margin_right = 1453.5
margin_bottom = 1218.82
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Finish" type="Control" parent="Viewports/CenterInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Finish" type="Control" parent="Viewports/CenterInfo/Finish"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Top" type="TextureRect" parent="Viewports/CenterInfo/Finish/Finish"]
margin_left = 563.045
margin_top = -60.1343
margin_right = 1463.04
margin_bottom = 439.866
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot" type="TextureRect" parent="Viewports/CenterInfo/Finish/Finish"]
margin_left = 453.501
margin_top = 718.817
margin_right = 1453.5
margin_bottom = 1218.82
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )

[node name="Carnage" type="Control" parent="Viewports/CenterInfo/Finish"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Top" type="TextureRect" parent="Viewports/CenterInfo/Finish/Carnage"]
margin_left = 563.045
margin_top = -60.1343
margin_right = 1463.04
margin_bottom = 439.866
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot" type="TextureRect" parent="Viewports/CenterInfo/Finish/Carnage"]
margin_left = 453.501
margin_top = 718.817
margin_right = 1453.5
margin_bottom = 1218.82
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )

[node name="Timeout" type="Control" parent="Viewports/CenterInfo/Finish"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Top" type="TextureRect" parent="Viewports/CenterInfo/Finish/Timeout"]
margin_left = 563.045
margin_top = -60.1343
margin_right = 1463.04
margin_bottom = 439.866
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot" type="TextureRect" parent="Viewports/CenterInfo/Finish/Timeout"]
margin_left = 453.501
margin_top = 718.817
margin_right = 1453.5
margin_bottom = 1218.82
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 27 )

[node name="TimeoutLast" type="Control" parent="Viewports/CenterInfo/Finish"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Top" type="TextureRect" parent="Viewports/CenterInfo/Finish/TimeoutLast"]
margin_left = 563.045
margin_top = -60.1343
margin_right = 1463.04
margin_bottom = 439.866
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot" type="TextureRect" parent="Viewports/CenterInfo/Finish/TimeoutLast"]
margin_left = 453.501
margin_top = 718.817
margin_right = 1453.5
margin_bottom = 1218.82
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 30 )

[node name="Viewport" type="Viewport" parent="Viewports"]
pause_mode = 1
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="VC" type="ViewportContainer" parent="Viewports/Viewport"]
material = SubResource( 7 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Viewport" type="Viewport" parent="Viewports/Viewport/VC"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true
shadow_atlas_size = 4096
shadow_atlas_quad_2 = 2
shadow_atlas_quad_3 = 2

[node name="Camera" type="Camera" parent="Viewports/Viewport/VC/Viewport"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 22, 0 )
current = true
fov = 45.0

[connection signal="timeout" from="Viewports/TutorialTimer" to="." method="_on_TutorialTimer_timeout"]
[connection signal="timeout" from="Viewports/EndScreenTimer" to="." method="show_end_screen"]
